2002-10-31  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/ftpfs.py (FTPFile.robuster): now catch more errors.

2002-10-25  Jacob Smullyan  <jsmullyan@wnyc.org>

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:url:>}}): Added
	documentation about the abs argument to <:url:>.

	* SkunkWeb/Services/templating/UrlBuilder.py (_genUrl): fixed url
	generation so it handles "need_full" argument correctly; now
	handles https and relies less on the presence of the Host request
	header. 

	* SkunkWeb/Services/templating/HTMLTags.py (UrlTag.genCode): added
	new argument, "abs", which generates an absolute url when true.

2002-10-24  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/static.py: made to work with Python 2.2.2.

2002-10-22    <smulloni@smullbola.smullyan.org>

	* pylibs/vfs/ftpfs.py: fixes to metaclass.  Doesn't work well
	anyway, on my installation; for me, ftplib segfaults, which is
	quite nasty.

2002-10-21  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/ftpfs.py (FTPFile.__new__): fatal typo in metaclass.

2002-10-09  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/vfs/ftpfs.py (FTPFile.connect): fatal bug -- left out
	"self".  Oy.
	(FtpFS.__init__): changed default port to ftplib.FTP_PORT rather
	than 0.
	
2002-10-08    <smulloni@smullbola.smullyan.org>

	* SkunkWeb/Services/auth/__init__.py (CookieAuthBase.login): added
	REMOTE_USER and REMOTE_PASSWORD to CONNECTION.env more consistently.
	(RespAuthBase.authFailed): no longer require use of string exception, 
	but permit it for backwards compatibility.
	
2002-10-08  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/xmlrpchandler.py (XMLRPCServer.handle_cgi): added support
	for cgis, thereby justifying this module's presence in pylibs.
	(munge_transports): a foul hack to give me the ability to use
	basic auth (or add any http headers I want to the request) with
	xmlrpclib.

2002-10-05  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/swcgi.py.in: swcgi was misbehaving due to not always