@@ -1,6 +1,6 @@
 # -*-python-*-
-# Time-stamp: <02/10/06 00:32:34 smulloni>
-# $Id: hoptime.conf,v 1.1 2002/10/06 14:37:59 smulloni Exp $
+# Time-stamp: <02/10/31 00:32:07 smulloni>
+# $Id: hoptime.conf,v 1.2 2002/11/01 17:54:07 smulloni Exp $
 
 # this configuration file is meant to be sourced
 # with an Include directive by sw.conf; it supports
@@ -18,12 +18,13 @@ for x in ('requestHandler',
 
 PostgreSQLConnectParams = {'hoptime' : 'localhost:hoptime:jsdds:Mamjjasond'}
 
-Scope(Location("/hopwerk/",
-               authAuthorizer="hoptime.hopauth.CookieHoptimeAuth",
-               authAuthorizerCtorArgs=('auth',
-                                       'hopwerk',
-                                       {'path':'/hopwerk/'},
-                                       '/login.html'),
-               authActivated=1))
+Scope(Location("/",
+               authAuthorizer="hoptime.hopauth.HoptimeAuth",
+               authAuthorizerCtorArgs=('/login.html',),
+               authActivated=1),
+      Location("/members/",
+               HoptimeRequireValidUser=1))
 
 # add rewrite rules here
+
+rewriteRules=[(r'^/texts/(?P<id>\d+)$', r'/texts/index.html')]
