@@ -1,0 +1,9 @@
+# $Id: story_links.pydcmp,v 1.1 2002/11/01 17:54:13 smulloni Exp $
+# returns a list of story titles and ids.
+import hoptime.hopapi as HAPI
+
+
+
+raise ReturnValue, HAPI.getLatestStoryLinks(limit)
+    
+        
